# speed_and_pose_prediction

./: CMakeLists.txt  README.md  package.xml
launch/: speed_and_pose_prediction.launch
src/: speed_and_pose_prediction_ros_node.cpp
