<?xml version="1.0"?>
<package format="2">
  <name>speed_and_pose_prediction</name>
  <version>0.0.1</version>
  <description>speed_and_pose_prediction_ros node.</description>
  <author>wyw</author>
  <maintainer email="diracweizi@163.com">wyw</maintainer>
  <url type="website">http://</url>

  <license>None</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rosconsole_bridge</depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp_serialization</depend>
  <depend>sensor_msgs</depend>

</package>
